# wolpertinger

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
crates/wolpertinger-macros/: Cargo.toml
crates/wolpertinger-macros/src/: lib.rs
docs/: DESIGN.md  STEPS.md
src/: cli.rs  config.rs  emulator.rs  error.rs  gdb.rs  image.rs  lib.rs  main.rs
src/arch/: mod.rs  x64.rs  x86.rs
src/debug/: gdb.rs  mod.rs
src/hooks/: api.rs  disasm.rs  memory.rs  mod.rs
src/loader/: dll.rs  mod.rs  pe.rs
src/memory/: mod.rs
src/os/: mod.rs
src/os/windows/: handle.rs  mod.rs  registry.rs  thread.rs
src/os/windows/dlls/: kernel32.rs  mod.rs  msvcrt.rs  user32.rs
src/util/: mod.rs  path.rs
tests/: cli_exit32.rs  integration.rs  trace_cli.rs
tests/programs/: CMakeLists.txt
tests/programs/exit_only/: CMakeLists.txt  main.c
tests/programs/message_box/: CMakeLists.txt  tiny.c
